# In-slot-scheduling-and-Automatic-slot-filling

./: CMakeLists.txt  README.md  REPORT.md  core_basic.vcd  core_edge.vcd  core_edgecases.vcd  run_tests.ps1  run_tests.sh
data/: example.asm  example_auto_input.asm  example_manual.asm  example_program.c
docs/: ARCH_NOTES.md  REPORT.md  synthesis_report.md  utilization_report.md
include/: instruction.h  parser.h  pipeline_sim.h  scheduler.h
rtl/: alu.v  branch_unit.v  core_top.v  cpu_pipeline.v  data_memory.v  delay_slot_scheduler.v  ex_stage.v  hazard_unit.v  id_stage.v  if_stage.v  instruction_memory.v  isa_defs.vh  mem_stage.v  reg_file.v  wb_stage.v
src/: instruction.cpp  parser.cpp  pipeline_sim.cpp  pipeline_sim_main.cpp  schedule_tool.cpp  scheduler.cpp
synthesis/: netlist_exported.v  power_1.rpx  synthesis.xpr
synthesis/synthesis.cache/wt/: webtalk_pa.xml
synthesis/synthesis.runs/.jobs/: vrs_config_3.xml  vrs_config_7.xml
synthesis/synthesis.runs/impl_1/: .opt_design.begin.rst  .vivado.begin.rst  core_top.tcl  core_top.vdi  core_top_drc_opted.rpt  core_top_drc_opted.rpx  core_top_opt.dcp  gen_run.xml  htr.txt  init_design.pb  opt_design.pb  place_design.pb  rundef.js  runme.sh  vivado.jou
synthesis/synthesis.runs/synth_1/: .vivado.begin.rst  core_top.dcp  core_top.tcl  core_top_utilization_synth.pb  core_top_utilization_synth.rpt  gen_run.xml  htr.txt  project.wdf  rundef.js  runme.sh  vivado.jou  vivado.pb
tb/: tb_core_basic.v  tb_core_edgecases.v
tests/: scheduler_tests.cpp
tmp/: scheduled.asm
(+1 files in other folders)
